--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "minio": "^7.0.16",
     "next": "9.5.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-images": "^1.1.7",
+    "react-photo-gallery": "^8.0.0"
+  },
+  "devDependencies": {
+    "@types/minio": "^7.0.6"
   }
 }
